# lidar-compensation

./: CMakeLists.txt  README.org  nodelets.xml  package.xml
include/: AuxiliarFunctions.hh  LidarCompensation.hh
launch/: LidarCompensation.launch
src/: AuxiliarFunctions.cc  LidarCompensation.cc
