<?xml version="1.0"?>
<package format="2">
  <name>lidar-compensation</name>
  <version>1.0.0</version>
  <description>The LiDAR Compensation package.</description>

  <author email="david@alvarezrosa.com">David Álvarez Rosa</author>
  <maintainer email="david@alvarezrosa.com">David Álvarez Rosa</maintainer>
  <url type="website">http://serv-driverless-33:81/david.alvarez/lidar-compensation</url>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>nodelet</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
